All Back without edit

--- a/views/add_preinstallation.html
+++ b/views/add_preinstallation.html
@@ -88,7 +88,7 @@
                         </a>
                         <ul class="sub">
                             <li class="active"><a href="/showPre-installationform">Pre-installation Report</a></li>
-                            <li><a href="preventive_maintance.html">Preventive Maintainance Report</a></li>
+                            <li><a href="home/preventive_maintance.handlebars">Preventive Maintainance Report</a></li>
                             <li><a href="/showWorkOrders">Work Order Report</a></li>
                         </ul>
                     </li>
@@ -268,7 +268,7 @@
                                         <label for="date" class="control-label col-lg-2">Date</label>
                                         <div class="col-lg-3">
                                             <div data-date-viewmode="years" data-date-format="dd-mm-yyyy" data-date="01-01-2014" class="input-append date dpYears">
-                                                <input type="text" readonly="" id="date" name="date" value="01-01-2014" size="16" class="form-control" required>
+                                                <input type="text" readonly="" id="date" name="date"  size="16" class="form-control" required>
                                                 <span class="input-group-btn add-on">
                             <button class="btn btn-theme" type="button"><i class="fa fa-calendar"></i></button>
                             </span>
