--- a/views/add_workorder.html
+++ b/views/add_workorder.html
@@ -88,7 +88,7 @@
                         </a>
                         <ul class="sub">
                             <li><a href="/showPre-installationform">Pre-installation Report</a></li>
-                            <li><a href="preventive_maintance.html">Preventive Maintainance Report</a></li>
+                            <li><a href="/showPreMain">Preventive Maintainance Report</a></li>
                             <li class="active"><a href="/showWorkOrders">Work Order Report</a></li>
                         </ul>
                     </li>
