--- a/views/edit_equipment.html
+++ b/views/edit_equipment.html
@@ -89,7 +89,7 @@
                         </a>
                         <ul class="sub">
                             <li><a href="/showPre-installationform">Pre-installation Report</a></li>
-                            <li><a href="preventive_maintance.html">Preventive Maintainance Report</a></li>
+                            <li><a href="home/preventive_maintance.handlebars">Preventive Maintainance Report</a></li>
                             <li><a href="/showWorkOrders">Work Order Report</a></li>
                         </ul>
                     </li>
@@ -124,7 +124,7 @@
                                         <label for="model" class="control-label col-lg-2">Model</label>
                                         <div class="col-lg-3">
                                             <div data-date-viewmode="years" data-date-format="dd-mm-yyyy" data-date="01-01-2014" class="input-append date dpYears">
-                                                <input type="text" readonly="" id="model" name="model" value="20-10-2020" size="16" class="form-control" required>
+                                                <input type="text" readonly="" id="model" name="model" size="16" class="form-control" required>
                                                 <span class="input-group-btn add-on">
                             <button class="btn btn-theme" type="button"><i class="fa fa-calendar"></i></button>
                             </span>
