--- a/views/edit_preventive.html
+++ b/views/edit_preventive.html
@@ -88,7 +88,7 @@
                         </a>
                         <ul class="sub">
                             <li><a href="/showPre-installationform">Pre-installation Report</a></li>
-                            <li class="active"><a href="preventive_maintance.html">Preventive Maintainance Report</a></li>
+                            <li class="active"><a href="/showPreMain">Preventive Maintainance Report</a></li>
                             <li><a href="/showWorkOrders">Work Order Report</a></li>
                         </ul>
                     </li>
@@ -166,7 +166,7 @@
                                     <div class="form-group">
                                         <div class="col-lg-offset-2 col-lg-10">
                                             <button class="btn btn-theme" type="submit">Save</button>
-                                            <a class="btn btn-theme04" type="button" href="preventive_maintance.html">Cancel</a>
+                                            <a class="btn btn-theme04" type="button" href="home/preventive_maintance.handlebars">Cancel</a>
                                         </div>
                                     </div>
                                 </form>
