--- a/views/home/preventive_maintance.handlebars
+++ b/views/home/preventive_maintance.handlebars
@@ -88,7 +88,7 @@
                         </a>
                         <ul class="sub">
                             <li><a href="/showPre-installationform">Pre-installation Report</a></li>
-                            <li class="active"><a href="preventive_maintance.html">Preventive Maintainance Report</a></li>
+                            <li class="active"><a href="preventive_maintance.handlebars">Preventive Maintainance Report</a></li>
                             <li><a href="/showWorkOrders">Work Order Report</a></li>
                         </ul>
                     </li>
@@ -109,39 +109,41 @@
                     <!-- page start-->
                     <div class="content-panel">
                         <div class="adv-table">
-                            <a type="button" class="btn btn-theme" href="add_preventive.html" style="float: right!important;margin: 20px 20px!important;"><i class="fa  fa-plus-square" style="margin-right: 5px!important;"></i> Add A Preventive Maintainance Report</a>
+                            <a type="button" class="btn btn-theme" href="../add_preventive.html" style="float: right!important;margin: 20px 20px!important;"><i class="fa  fa-plus-square" style="margin-right: 5px!important;"></i> Add A Preventive Maintainance Report</a>
 
                             <table cellpadding="0" cellspacing="0" border="0" class="display table table-bordered" id="hidden-table-info">
 
                                 <thead>
+
                                     <tr>
-                                        <th>Manufacture</th>
-                                        <th>Serial Number</th>
+<!--                                        <th>Manufacture</th>-->
+                                        <th>Serail Number</th>
                                         <th>Version</th>
                                         <th class="hidden-phone">Schedule Date</th>
                                         <th class="hidden-phone">Frequancy of Maintainance</th>
-                                        <th class="hidden-phone">Processes</th>
-                                        <th class="hidden-phone">Days of Maintainance</th>
+<!--                                        <th class="hidden-phone">Processes</th>-->
+<!--                                        <th class="hidden-phone">Days of Maintainance</th>-->
                                         <th>Manage</th>
                                     </tr>
+
                                 </thead>
+
+                                {{#each pre}}
                                 <tbody>
                                     <tr class="gradeA">
-                                        <td>Siemens</td>
-                                        <td>123</td>
-                                        <td>AB15</td>
-                                        <td class="  hidden-phone">20-10-2020</td>
-                                        <td class=" hidden-phone">3</td>
-                                        <td class=" hidden-phone">processes</td>
-                                        <td class=" hidden-phone">5</td>
-
+                                        <td>{{this.dataValues.SerialNO}}</td>
+                                        <td>{{this.dataValues.Model}}</td>
+                                        <td>{{this.dataValues.DueDate}}</td>
+                                        <td class="  hidden-phone">{{this.dataValues.frequency}}</td>
                                         <td class="center">
-                                            <a href="edit_preventive.html" class="btn btn-primary btn-xs"><i class="fa fa-pencil"></i></a>
+                                            <a href="../edit_preventive.html" class="btn btn-primary btn-xs"><i class="fa fa-pencil"></i></a>
                                             <button class="btn btn-danger btn-xs" data-toggle="modal" data-target="#delete"><i class="fa fa-trash-o"></i></button>
                                         </td>
                                     </tr>
 
                                 </tbody>
+                                {{/each}}
+
                             </table>
                         </div>
                     </div>
