--- a/views/add_equipment.html
+++ b/views/add_equipment.html
@@ -89,7 +89,7 @@
                         </a>
                         <ul class="sub">
                             <li><a href="/showPre-installationform">Pre-installation Report</a></li>
-                            <li><a href="preventive_maintance.html">Preventive Maintainance Report</a></li>
+                            <li><a href="/showPreMain">Preventive Maintainance Report</a></li>
                             <li><a href="/showWorkOrders">Work Order Report</a></li>
                         </ul>
                     </li>
@@ -117,29 +117,41 @@
                                     <div class="form-group">
                                         <label for="lastname" class="control-label col-lg-2">Name</label>
                                         <div class="col-lg-10">
-                                            <input class=" form-control" id="lastname" name="name" type="text" required/>
+                                            <input class=" form-control"  name="name" type="text" required/>
                                         </div>
                                     </div>
                                     <div class="form-group">
                                         <label for="model" class="control-label col-lg-2">Model</label>
                                         
                                             <div class="col-lg-10">
-                                            <input class=" form-control" id="lastname" name="model" type="text" required/>
+                                            <input class=" form-control"  name="model" type="text" required/>
                                         </div>
                                            
                                         
                                     </div>
                                     <div class="form-group">
-                                        <label for="model" class="control-label col-lg-2">Serial Number</label>
+                                        <label  class="control-label col-lg-2">Serial Number</label>
                                         <div class="col-lg-10">
-                                            <input class="form-control"  name="serial" type="number" required />
+                                            <input class="form-control"  name="serial" type="string" required />
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label  class="control-label col-lg-2">Preventive Maintance</label>
+                                        <div class="col-lg-10">
+                                            <input class="form-control"  name="PreventiveM" type="text" />
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label  class="control-label col-lg-2">Frequancy</label>
+                                        <div class="col-lg-10">
+                                            <input class="form-control"  name="freq" type="text"  />
                                         </div>
                                     </div>
                                     <div class="form-group">
                                         <label for="maintainDate" class="control-label col-lg-2">Maintainance Date</label>
                                         <div class="col-lg-3">
                                             <div data-date-viewmode="years" data-date-format="dd-mm-yyyy" data-date="01-01-2014" class="input-append date dpYears">
-                                                <input type="text" readonly="" id="maintainDate" name="maintainDate" value="01-01-2014" size="16" class="form-control" required>
+                                                <input type="text" readonly="" id="maintainDate" name="maintainDate"  size="16" class="form-control" required>
                                                 <span class="input-group-btn add-on">
                             <button class="btn btn-theme" type="button"><i class="fa fa-calendar"></i></button>
                             </span>
