--- a/views/edit_technician.html
+++ b/views/edit_technician.html
@@ -87,7 +87,7 @@
                         </a>
                         <ul class="sub">
                             <li><a href="/showPre-installationform">Pre-installation Report</a></li>
-                            <li><a href="preventive_maintance.html">Preventive Maintainance Report</a></li>
+                            <li><a href="/showPreMain">Preventive Maintainance Report</a></li>
                             <li><a href="/showWorkOrders">Work Order Report</a></li>
                         </ul>
                     </li>
