--- a/views/home/engineers.handlebars
+++ b/views/home/engineers.handlebars
@@ -135,7 +135,7 @@
                                         <td>{{this.dataValues.Email}}</td>
 
                                 <td class="center">
-                                <a href="edit_engineer.html" class="btn btn-primary btn-xs"><i class="fa fa-pencil"></i></a>
+                                <a href="/showEditEng" class="btn btn-primary btn-xs"><i class="fa fa-pencil"></i></a>
                                             <button class="btn btn-danger btn-xs" data-toggle="modal" data-target="#delete"><i class="fa fa-trash-o"></i></button>
 
                                         </td>
