--- a/views/home/equipments.handlebars
+++ b/views/home/equipments.handlebars
@@ -132,7 +132,7 @@
                                         <td class=" hidden-phone">{{this.dataValues.DueDate}}</td>
                                         <td class=" hidden-phone">{{this.dataValues.Department}}</td>
                                         <td class="center">
-                                            <a href="edit_equipment.html" class="btn btn-primary btn-xs"><i class="fa fa-pencil"></i></a>
+                                            <a href="/showEditEq" class="btn btn-primary btn-xs"><i class="fa fa-pencil"></i></a>
                                             <button class="btn btn-danger btn-xs" data-toggle="modal" data-target="#delete"><i class="fa fa-trash-o"></i></button>
                                         </td>
                                     </tr>
