--- a/views/edit_engineer.html
+++ b/views/edit_engineer.html
@@ -110,35 +110,36 @@
                     <div class="col-lg-12">
                         <div class="form-panel">
                             <div class="form">
-                                <form class="cmxform form-horizontal style-form" id="signupForm" method="get" action="">
+
+                                <form class="cmxform form-horizontal style-form" id="signupForm" method="POST" action="/editEng">
                                     <div class="form-group">
                                         <label for="firstname" class="control-label col-lg-2">First Name</label>
                                         <div class="col-lg-10">
-                                            <input class=" form-control" id="firstname" name="firstname" type="text" value="Alaa" required/>
+                                            <input class=" form-control" id="firstname" name="firstname" type="text"  required/>
                                         </div>
                                     </div>
                                     <div class="form-group">
                                         <label for="lastname" class="control-label col-lg-2">Last Name</label>
                                         <div class="col-lg-10">
-                                            <input class=" form-control" id="lastname" name="lastname" type="text" value="Gamal" required/>
+                                            <input class=" form-control" id="lastname" name="lastname" type="text"  required/>
                                         </div>
                                     </div>
                                     <div class="form-group">
                                         <label for="job" class="control-label col-lg-2">Job</label>
                                         <div class="col-lg-10">
-                                            <input class="form-control" id="job" name="job" type="text" value="Biomedical Engineer" required />
+                                            <input class="form-control" id="job" name="job" type="text"  required />
                                         </div>
                                     </div>
                                     <div class="form-group">
                                         <label for="email" class="control-label col-lg-2">Email</label>
                                         <div class="col-lg-10">
-                                            <input class="form-control" id="email" name="email" type="email" value="aaa@abc.xx" required />
+                                            <input class="form-control" id="email" name="email" type="email"  required />
                                         </div>
                                     </div>
                                     <div class="form-group">
                                         <label for="password" class="control-label col-lg-2">Password</label>
                                         <div class="col-lg-10">
-                                            <input class="form-control" id="password" name="password" type="password" value="123" required/>
+                                            <input class="form-control" id="password" name="password" type="password" required/>
                                         </div>
                                     </div>
 
