--- a/views/edit_equipment.html
+++ b/views/edit_equipment.html
@@ -112,18 +112,18 @@
                     <div class="col-lg-12">
                         <div class="form-panel">
                             <div class="form">
-                                <form class="cmxform form-horizontal style-form" id="signupForm" method="get" action="">
+                                <form class="cmxform form-horizontal style-form" id="signupForm" method="POST" action="/editEq">
 
                                     <div class="form-group">
                                         <label for="lastname" class="control-label col-lg-2">Name</label>
                                         <div class="col-lg-10">
-                                            <input class=" form-control" id="lastname" name="lastname" type="text" value="MRI" required/>
+                                            <input class=" form-control" id="lastname" name="lastname" type="text"  required/>
                                         </div>
                                     </div>
                                     <div class="form-group">
                                         <label for="model" class="control-label col-lg-2">Model</label>
                                         <div class="col-lg-3">
-                                            <div data-date-viewmode="years" data-date-format="dd-mm-yyyy" data-date="01-01-2014" class="input-append date dpYears">
+                                            <div data-date-viewmode="years" data-date-format="dd-mm-yyyy" class="input-append date dpYears">
                                                 <input type="text" readonly="" id="model" name="model" size="16" class="form-control" required>
                                                 <span class="input-group-btn add-on">
                             <button class="btn btn-theme" type="button"><i class="fa fa-calendar"></i></button>
@@ -135,14 +135,14 @@
                                     <div class="form-group">
                                         <label for="serial" class="control-label col-lg-2">Serial Number</label>
                                         <div class="col-lg-10">
-                                            <input class="form-control" id="serial" name="serial" type="number" value="111" required />
+                                            <input class="form-control" id="serial" name="serial" type="number"  required />
                                         </div>
                                     </div>
                                     <div class="form-group">
                                         <label for="maintainDate" class="control-label col-lg-2">Maintainance Date</label>
                                         <div class="col-lg-3">
-                                            <div data-date-viewmode="years" data-date-format="dd-mm-yyyy" data-date="01-01-2014" class="input-append date dpYears">
-                                                <input type="text" readonly="" id="maintainDate" name="maintainDate" value="20-10-2021" size="16" class="form-control" required>
+                                            <div data-date-viewmode="years" data-date-format="dd-mm-yyyy"  class="input-append date dpYears">
+                                                <input type="text" readonly="" id="maintainDate" name="maintainDate" size="16" class="form-control" required>
                                                 <span class="input-group-btn add-on">
                             <button class="btn btn-theme" type="button"><i class="fa fa-calendar"></i></button>
                             </span>
@@ -153,18 +153,18 @@
                                     <div class="form-group">
                                         <label for="department" class="control-label col-lg-2">Department</label>
                                         <div class="col-lg-10">
-                                            <input class="form-control" id="department" name="department" type="text" value="Radiology" required />
+                                            <input class="form-control" id="department" name="department" type="text"  required />
                                         </div>
                                     </div>
                                     <div class="form-group">
                                         <div class="col-lg-offset-2 col-lg-10">
                                             <button class="btn btn-theme" type="submit">Save</button>
-                                            <a class="btn btn-theme04" type="button" href="equipments.html">Cancel</a>
+                                            <a class="btn btn-theme04" type="button" href="/showEq">Cancel</a>
                                         </div>
                                     </div>
                                 </form>
                             </div>
-                        </div>
+                        </div>editEq
                         <!-- /form-panel -->
                     </div>
                     <!-- /col-lg-12 -->
