--- a/views/edit_technician.html
+++ b/views/edit_technician.html
@@ -110,47 +110,47 @@
                     <div class="col-lg-12">
                         <div class="form-panel">
                             <div class="form">
-                                <form class="cmxform form-horizontal style-form" id="signupForm" method="get" action="">
+                                <form class="cmxform form-horizontal style-form" id="signupForm" method="POST" action="/editTech">
                                     <div class="form-group">
                                         <label for="firstname" class="control-label col-lg-2">First Name</label>
                                         <div class="col-lg-10">
-                                            <input class=" form-control" id="firstname" name="firstname" type="text" value="Alaa" required/>
+                                            <input class=" form-control" id="firstname" name="firstname" type="text"  required/>
                                         </div>
                                     </div>
                                     <div class="form-group">
                                         <label for="lastname" class="control-label col-lg-2">Last Name</label>
                                         <div class="col-lg-10">
-                                            <input class=" form-control" id="lastname" name="lastname" type="text" value="Gamal" required/>
+                                            <input class=" form-control" id="lastname" name="lastname" type="text"  required/>
                                         </div>
                                     </div>
                                     <div class="form-group">
                                         <label for="id" class="control-label col-lg-2">ID</label>
                                         <div class="col-lg-10">
-                                            <input class="form-control" id="id" name="id" type="number" value="111" required />
+                                            <input class="form-control" id="id" name="id" type="number" required />
                                         </div>
                                     </div>
                                     <div class="form-group">
                                         <label for="serial" class="control-label col-lg-2">Serial Number</label>
                                         <div class="col-lg-10">
-                                            <input class="form-control" id="serial" name="serial" type="number" value="123" required />
+                                            <input class="form-control" id="serial" name="serial" type="number"  required />
                                         </div>
                                     </div>
                                     <div class="form-group">
                                         <label for="company" class="control-label col-lg-2">Company's Name</label>
                                         <div class="col-lg-10">
-                                            <input class="form-control" id="company" name="company" type="text" value="cufe" required/>
+                                            <input class="form-control" id="company" name="company" type="text" required/>
                                         </div>
                                     </div>
                                     <div class="form-group">
                                         <label for="phone" class="control-label col-lg-2">Phone Number</label>
                                         <div class="col-lg-10">
-                                            <input class="form-control" id="phone" name="phone" type="number" value="098" required />
+                                            <input class="form-control" id="phone" name="phone" type="number"  required />
                                         </div>
                                     </div>
                                     <div class="form-group">
                                         <div class="col-lg-offset-2 col-lg-10">
                                             <button class="btn btn-theme" type="submit">Save</button>
-                                            <a class="btn btn-theme04" type="button" href="technicians.html">Cancel</a>
+                                            <a class="btn btn-theme04" type="button" href="/viewTech">Cancel</a>
                                         </div>
                                     </div>
                                 </form>
