--- a/views/home/technicians.handlebars
+++ b/views/home/technicians.handlebars
@@ -135,7 +135,7 @@
                                         <td class=" hidden-phone">{{this.dataValues.PhoneNumber}}</td>
 
                                         <td class="center">
-                                            <a href="edit_technician.html" class="btn btn-primary btn-xs"><i class="fa fa-pencil"></i></a>
+                                            <a href="/showEditTech" class="btn btn-primary btn-xs"><i class="fa fa-pencil"></i></a>
                                             <button class="btn btn-danger btn-xs" data-toggle="modal" data-target="#delete"><i class="fa fa-trash-o"></i></button>
                                         </td>
                                     </tr>
