--- a/views/edit_equipment.html
+++ b/views/edit_equipment.html
@@ -122,16 +122,14 @@
                                     </div>
                                     <div class="form-group">
                                         <label for="model" class="control-label col-lg-2">Model</label>
-                                        <div class="col-lg-3">
-                                            <div data-date-viewmode="years" data-date-format="dd-mm-yyyy" class="input-append date dpYears">
-                                                <input type="text" readonly="" id="model" name="model" size="16" class="form-control" required>
-                                                <span class="input-group-btn add-on">
-                            <button class="btn btn-theme" type="button"><i class="fa fa-calendar"></i></button>
-                            </span>
-                                            </div>
-                                            <span class="help-block">Select date</span>
+
+                                        <div class="col-lg-10">
+                                            <input class=" form-control"  name="model" type="text" required/>
                                         </div>
+
+
                                     </div>
+<!--                                    </div>-->
                                     <div class="form-group">
                                         <label for="serial" class="control-label col-lg-2">Serial Number</label>
                                         <div class="col-lg-10">
@@ -141,8 +139,8 @@
                                     <div class="form-group">
                                         <label for="maintainDate" class="control-label col-lg-2">Maintainance Date</label>
                                         <div class="col-lg-3">
-                                            <div data-date-viewmode="years" data-date-format="dd-mm-yyyy"  class="input-append date dpYears">
-                                                <input type="text" readonly="" id="maintainDate" name="maintainDate" size="16" class="form-control" required>
+                                            <div data-date-viewmode="years" data-date-format="dd-mm-yyyy" data-date="01-01-2014" class="input-append date dpYears">
+                                                <input type="text" readonly="" id="maintainDate" name="maintainDate"  size="16" class="form-control" required>
                                                 <span class="input-group-btn add-on">
                             <button class="btn btn-theme" type="button"><i class="fa fa-calendar"></i></button>
                             </span>
