--- a/views/home/edit_equipment.handlebars
+++ b/views/home/edit_equipment.handlebars
@@ -89,7 +89,7 @@
                         </a>
                         <ul class="sub">
                             <li><a href="/showPre-installationform">Pre-installation Report</a></li>
-                            <li><a href="home/preventive_maintance.handlebars">Preventive Maintainance Report</a></li>
+                            <li><a href="preventive_maintance.handlebars">Preventive Maintainance Report</a></li>
                             <li><a href="/showWorkOrders">Work Order Report</a></li>
                         </ul>
                     </li>
