--- a/views/edit_equipment.html
+++ b/views/edit_equipment.html
@@ -89,7 +89,7 @@
                         </a>
                         <ul class="sub">
                             <li><a href="/showPre-installationform">Pre-installation Report</a></li>
-                            <li><a href="preventive_maintance.handlebars">Preventive Maintainance Report</a></li>
+                            <li><a href="home/preventive_maintance.handlebars">Preventive Maintainance Report</a></li>
                             <li><a href="/showWorkOrders">Work Order Report</a></li>
                         </ul>
                     </li>
@@ -115,9 +115,9 @@
                                 <form class="cmxform form-horizontal style-form" id="signupForm" method="POST" action="/editEq">
 
                                     <div class="form-group">
-                                        <label for="lastname" class="control-label col-lg-2">Name</label>
+                                        <label for="name" class="control-label col-lg-2">Name</label>
                                         <div class="col-lg-10">
-                                            <input class=" form-control" id="lastname" name="lastname" type="text"  required/>
+                                            <input class=" form-control" id="name" name="name" type="text"  required/>
                                         </div>
                                     </div>
                                     <div class="form-group">
