--- a/views/add_equipment.html
+++ b/views/add_equipment.html
@@ -66,20 +66,21 @@
                         </a>
                     </li>
                     <li class="sub-menu">
-                        <a href="javascript:;">
+                        <a href="/viewEng">
                             <i class="fa fa-user-md"></i>
-                            <span>Staff</span>
+                            <span>Engineers</span>
                         </a>
-                        <ul class="sub">
-                            <li><a href="/viewEng">Engineers</a></li>
-                            <li><a href="/viewTech">Technicians</a></li>
-
-                        </ul>
                     </li>
                     <li class="mt">
                         <a class="active" href="/showEq">
                             <i class="fa fa-cogs"></i>
                             <span>Equipments</span>
+                        </a>
+                    </li>
+                    <li class="sub-menu">
+                        <a href="/showPreMain">
+                            <i class="fa fa-cogs"></i>
+                            <span>Preventive Maintainance</span>
                         </a>
                     </li>
                     <li class="sub-menu">
@@ -89,7 +90,6 @@
                         </a>
                         <ul class="sub">
                             <li><a href="/showPre-installationform">Pre-installation Report</a></li>
-                            <li><a href="/showPreMain">Preventive Maintainance Report</a></li>
                             <li><a href="/showWorkOrders">Work Order Report</a></li>
                         </ul>
                     </li>
@@ -115,9 +115,15 @@
                                 <form class="cmxform form-horizontal style-form" id="signupForm" method="POST" action="/getEqData">
 
                                     <div class="form-group">
-                                        <label for="lastname" class="control-label col-lg-2">Name</label>
+                                        <label for="name" class="control-label col-lg-2">Name</label>
                                         <div class="col-lg-10">
                                             <input class=" form-control"  name="name" type="text" required/>
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="ventor" class="control-label col-lg-2">Ventor</label>
+                                        <div class="col-lg-10">
+                                            <input class=" form-control"  name="ventor" type="text" required/>
                                         </div>
                                     </div>
                                     <div class="form-group">
@@ -125,6 +131,24 @@
                                         
                                             <div class="col-lg-10">
                                             <input class=" form-control"  name="model" type="text" required/>
+                                        </div>
+                                           
+                                        
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="operation" class="control-label col-lg-2">Operation</label>
+                                        
+                                            <div class="col-lg-10">
+                                            <input class=" form-control"  name="operation" type="text" required/>
+                                        </div>
+                                           
+                                        
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="cost" class="control-label col-lg-2">Cost</label>
+                                        
+                                            <div class="col-lg-10">
+                                            <input class=" form-control"  name="cost" type="number" required/>
                                         </div>
                                            
                                         
@@ -145,6 +169,12 @@
                                         <label  class="control-label col-lg-2">Frequancy</label>
                                         <div class="col-lg-10">
                                             <input class="form-control"  name="freq" type="text"  />
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label  class="control-label col-lg-2">Warranty Period</label>
+                                        <div class="col-lg-10">
+                                            <input class="form-control"  name="warrantyperiod" type="text"  />
                                         </div>
                                     </div>
                                     <div class="form-group">
