--- a/views/edit_equipment.html
+++ b/views/edit_equipment.html
@@ -66,20 +66,21 @@
                         </a>
                     </li>
                     <li class="sub-menu">
-                        <a href="javascript:;">
+                        <a href="/viewEng">
                             <i class="fa fa-user-md"></i>
-                            <span>Staff</span>
+                            <span>Engineers</span>
                         </a>
-                        <ul class="sub">
-                            <li><a href="/viewEng">Engineers</a></li>
-                            <li><a href="/viewTech">Technicians</a></li>
-
-                        </ul>
                     </li>
                     <li class="mt">
                         <a class="active" href="/showEq">
                             <i class="fa fa-cogs"></i>
                             <span>Equipments</span>
+                        </a>
+                    </li>
+                    <li class="sub-menu">
+                        <a href="/showPreMain">
+                            <i class="fa fa-cogs"></i>
+                            <span>Preventive Maintainance</span>
                         </a>
                     </li>
                     <li class="sub-menu">
@@ -89,7 +90,6 @@
                         </a>
                         <ul class="sub">
                             <li><a href="/showPre-installationform">Pre-installation Report</a></li>
-                            <li><a href="home/preventive_maintance.handlebars">Preventive Maintainance Report</a></li>
                             <li><a href="/showWorkOrders">Work Order Report</a></li>
                         </ul>
                     </li>
@@ -118,6 +118,42 @@
                                         <label for="name" class="control-label col-lg-2">Name</label>
                                         <div class="col-lg-10">
                                             <input class=" form-control" id="name" name="name" type="text"  required/>
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="ventor" class="control-label col-lg-2">Ventor</label>
+                                        <div class="col-lg-10">
+                                            <input class=" form-control" id="name" name="ventor" type="text"  required/>
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="prevenmain" class="control-label col-lg-2">Preventive Maintianance</label>
+                                        <div class="col-lg-10">
+                                            <input class=" form-control" id="name" name="preven" type="text"  required/>
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="freq" class="control-label col-lg-2">Frequance</label>
+                                        <div class="col-lg-10">
+                                            <input class=" form-control" id="name" name="freq" type="text"  required/>
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="operation" class="control-label col-lg-2">Operation</label>
+                                        <div class="col-lg-10">
+                                            <input class=" form-control" id="name" name="operation" type="text"  required/>
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="cost" class="control-label col-lg-2">Cost</label>
+                                        <div class="col-lg-10">
+                                            <input class=" form-control" id="name" name="cost" type="number"  required/>
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="warrantyperiod" class="control-label col-lg-2">Warranty Period</label>
+                                        <div class="col-lg-10">
+                                            <input class=" form-control" id="name" name="warrantyperiod" type="text"  required/>
                                         </div>
                                     </div>
                                     <div class="form-group">
